# Lingola

./: README.md
client/: Cargo.toml  index.html
client/src/: main.rs  router.rs  services.rs  styler.rs  views.rs
client/src/components/: button.rs  text.rs  typography.rs
client/src/views/: home.rs  landing.rs  learn.rs
client/styles/: index.css
server/: .env  .gitignore  Cargo.toml  go.mod  go.sum  main.go
server/migrations/2022-06-18-144354_create_words/: up.sql
server/models/: models.go  words.go
server/router/: router.go  words.go
server/src/: main.rs  models.rs  schema.rs
server/src/actors/: db.rs
server/utils/: babble.go  utils.go  wordnik.go
