[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
diesel = { version = "1.4.5", features = ["uuid", "r2d2", "postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"